@@ -117,7 +117,8 @@ public class Names {
 	public static final String success = "success";
 	public static final String resultCode = "resultCode";
 	public static final String info = "info";
-	
+	public static final String event = "event";
+
 	public static final String fordURL = "fordURL";
 	public static final String payload = "payload";
 	public static final String reason = "reason";
@@ -405,12 +406,10 @@ public class Names {
     public static final String distanceToEmpty = "distanceToEmpty";
 
     public static final String id = "id";
-    public static final String point = "point";
-    public static final String area = "area";
-    public static final String xCoord = "xCoord";
-    public static final String yCoord = "yCoord";
-    public static final String rotationAngle = "rotationAngle";
-    public static final String radiusCoord = "radiusCoord";
+    public static final String c = "c";
+    public static final String ts = "ts";
+    public static final String x = "x";
+    public static final String y = "y";
     public static final String pressAvailable = "pressAvailable";
     public static final String multiTouchAvailable = "multiTouchAvailable";
     public static final String doublePressAvailable = "doublePressAvailable";
@@ -418,10 +417,6 @@ public class Names {
     public static final String touchEventAvailable = "touchEventAvailable";
     public static final String templatesAvailable = "templatesAvailable";
     public static final String screenParams = "screenParams";
-    public static final String eventType = "eventType";
-    public static final String touchLists = "touchLists";
-    public static final String touches = "touches";
-    public static final String changedTouches = "changedTouches";
     public static final String OnTouchEvent = "OnTouchEvent";
     public static final String secondaryImage = "secondaryImage";
     public static final String resolutionWidth = "resolutionWidth";
